--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "moment": "^2.19.1",
     "perfect-scrollbar": "^1.1.0",
     "popper.js": "^1.12.6",
-    "skycons": "^1.0.0"
+    "skycons": "^1.0.0",
+    "sweetalert": "^2.1.0"
   }
 }
